--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -98,7 +98,7 @@ li.orbit-image-2  {
   }
 
   /* Accordion Mobile Nav  */
-  .accordion  {
+  .accordion.nav  {
     text-transform: uppercase;
     dd  {
       border-bottom: solid 1px rgba(0, 0, 0, 0.8);
@@ -228,7 +228,7 @@ li.orbit-image-2  {
     position: absolute;
     width: 100%;
     bottom: 0;
-    color: #222222;
+    color: black;
     background-color: rgba(0,0,0,0.75);
     z-index: -1;
     height: $nav-title-height;
